@@ -1,6 +1,7 @@
 User johns
 Date:
 
+    Fix bug #1089: Vdpau decoder used wrong number of mpeg reference frames.
     Fix bug: with some streams endless loop in pes audio parser.
     Report correct video size in cSoftHdDevice::GetVideoSize.
     Add picture adjustment support for vdpau.
